[tool.poetry]
name = "quantum-rl"
version = "0.1.0"
description = "Deep Reinforcement Learning with Variational Quantum Circuits"
authors = ["Lucas Wolf <iamlucaswolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
